# serial-ws2812

./: .gitmodules  .taplo.toml  Cargo.toml  README.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml
examples/: blocking.rs  example.rs  tokio.rs
firmware/: .embed.toml  Cargo.toml  build.rs  rustfmt.toml
firmware/.cargo/: config.toml
firmware/src/: globals.rs  main.rs  serial.rs  ws2812.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  tokio.rs
