[package]
name = "serial-ws2812"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "shared"
]
exclude = [
  "firmware"
]

[dependencies]
serial-ws2812-shared = { path = "./shared" }

serialport = "4.2.1"
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
eyre = "0.6.2"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
