[package]
name = "serial-ws2812"
version = "0.0.1"
authors = ["hrmny <github.leah@hrmny.sh>"]
categories = ["rust-patterns"]
description = "Control WS2812 via USB serial"
documentation = "https://docs.rs/serial-ws2812"
edition = "2021"
keywords = ["ws2812", "neopixel", "rp2040"]
license = "MPL-2"
repository = "https://github.com/ForsakenHarmony/serial-ws2812"

[workspace]
members = ["shared"]
exclude = ["firmware"]

[features]
tokio = ["dep:tokio-serial", "dep:tokio"]
timings = []

[dependencies]
serial-ws2812-shared = { version = "0.0.1", path = "./shared" }

serialport = "4.2.1"
thiserror = "1.0.44"
tokio = { version = "1.29.1", optional = true, features = ["io-util"] }
tokio-serial = { version = "5.4.4", optional = true }
tracing = "0.1.37"

[dev-dependencies]
color-eyre = "0.6.2"
eyre = "0.6.2"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "blocking"
required-features = ["timings"]

[[example]]
name = "tokio"
required-features = ["timings", "tokio"]
