[package]
name = "serial-ws2812-shared"
version = "0.0.1"
authors = ["hrmny <github.leah@hrmny.sh>"]
categories = ["rust-patterns"]
description = "Control WS2812 via USB serial (helper crate)"
documentation = "https://docs.rs/serial-ws2812"
edition = "2021"
keywords = ["ws2812", "neopixel", "rp2040"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForsakenHarmony/serial-ws2812"

[dependencies]
